sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:21: error: ')' expected but '}' found.
  } while (!isSorted)
  ^